--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -492,6 +492,10 @@
     "edt_conf_v4l2_device_expl": "Sökvägen till USB-fångstgränssnittet. Ställ in på 'auto' för automatisk upptäckt. Exempel: '/dev/video0'",
     "edt_conf_v4l2_standard_title": "Videostandard",
     "edt_conf_v4l2_standard_expl": "Välj videostandard för din region. 'Auto' behåller det värde som väljs av v4l2-gränssnittet",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "Bildreduktionsfaktor",
     "edt_conf_v4l2_sizeDecimation_expl": "Faktorn för bildminskning baserad på originalstorleken, 1 betyder ingen förändring (originalbild).",
     "edt_conf_v4l2_cropLeft_title": "Beskär vänster",
