--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -492,6 +492,10 @@
     "edt_conf_v4l2_device_expl": "Cesta k Zachycení/Graber usb.",
     "edt_conf_v4l2_standard_title": "Video standard",
     "edt_conf_v4l2_standard_expl": "Vyberte standard videa pro vaši oblast.",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "Velikost decimace",
     "edt_conf_v4l2_sizeDecimation_expl": "Faktor velikosti decimace",
     "edt_conf_v4l2_cropLeft_title": "Ořezat zleva",
