--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -470,7 +470,7 @@
 	"edt_conf_enum_PAL": "PAL",
 	"edt_conf_enum_NTSC": "NTSC",
 	"edt_conf_enum_SECAM": "SECAM",
-	"edt_conf_enum_NO_CHANGE": "Auto",
+	"edt_conf_enum_NO_CHANGE": "Automatisch",
 	"edt_conf_enum_logsilent": "Stille",
 	"edt_conf_enum_logwarn": "Warnung",
 	"edt_conf_enum_logverbose": "Ausführlich",
@@ -479,6 +479,7 @@
 	"edt_conf_enum_bbclassic": "Klassisch",
 	"edt_conf_enum_bbosd": "OSD",
 	"edt_conf_enum_automatic": "Automatisch",
+	"edt_conf_enum_custom": "Benutzerdefiniert",
 	"edt_conf_gen_heading_title": "Allgemeine Einstellungen",
 	"edt_conf_gen_name_title": "Name der Konfiguration",
 	"edt_conf_gen_name_expl": "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
@@ -539,9 +540,13 @@
 	"edt_conf_smooth_continuousOutput_expl": "Aktualisiere die LEDs, auch wenn das Bild sich nicht geändert hat.",
 	"edt_conf_v4l2_heading_title": "USB Aufnahme",
 	"edt_conf_v4l2_device_title": "Gerät",
-	"edt_conf_v4l2_device_expl": "Der Pfad zum USB (v4l) Aufnahmegerät. Wähle 'auto' für automatische Erkennung. Beispiel: '/dev/video0'",
+	"edt_conf_v4l2_device_expl": "Eine Liste von USB (v4l) Aufnahmegeräten. Wähle 'Automatisch' für automatische Erkennung. Benutzerdefiniert z.b.: '/dev/video0'",
 	"edt_conf_v4l2_standard_title": "Videoformat",
-	"edt_conf_v4l2_standard_expl": "Wähle das passende Videoformat deiner Region. Auf 'Auto' wird der gewählte Modus vom v4l interface beibehalten.",
+	"edt_conf_v4l2_standard_expl": "Wähle das passende Videoformat deiner Region. Auf 'Automatisch' wird der gewählte Modus vom v4l interface beibehalten.",
+	"edt_conf_v4l2_resolution_title": "Auflösung",
+	"edt_conf_v4l2_resolution_expl": "Eine Liste von unterstützten Auflösungen des aktiven Gerätes. Auf 'Automatisch' wird der gewählte Modus vom v4l interface beibehalten.",
+	"edt_conf_v4l2_framerate_title": "Bilder pro Sekunde",
+	"edt_conf_v4l2_framerate_expl": "Die unterstützten Bilder pro Sekunde des aktiven Gerätes. Auf 'Automatisch' wird der gewählte Modus vom v4l interface beibehalten.",
 	"edt_conf_v4l2_sizeDecimation_title": "Bildverkleinerung Faktor",
 	"edt_conf_v4l2_sizeDecimation_expl": "Der Faktor der Bildverkleinerung ausgehend von der ursprünglichen Größe, 1 bedeutet keine Änderung (originales Bild).",
 	"edt_conf_v4l2_cropLeft_title": "Entferne links",
@@ -570,9 +575,9 @@
 	"edt_conf_v4l2_sDHOffsetMax_expl": "Signal Erkennungs-Bereich horizontal maximum (0.0-1.0)",
 	"edt_conf_instCapture_heading_title": "Instance Aufnahme",
 	"edt_conf_instC_systemEnable_title": "Aktiviere Plattform Aufnahme",
-	"edt_conf_instC_systemEnable_expl": "Aktiviert die Plattform Aufnahme für diese LED Hardware Instanz",
+	"edt_conf_instC_systemEnable_expl": "Aktiviert die Plattform Aufnahme für diese LED Hardware Instanz.",
 	"edt_conf_instC_v4lEnable_title": "Aktiviere USB Aufnahme",
-	"edt_conf_instC_v4lEnable_expl": "Aktiviert die USB Aufnahme für diese LED Hardware Instanz",
+	"edt_conf_instC_v4lEnable_expl": "Aktiviert die USB Aufnahme für diese LED Hardware Instanz.",
 	"edt_conf_fg_heading_title": "Plattform Aufnahme",
 	"edt_conf_fg_type_title": "Typ",
 	"edt_conf_fg_type_expl": "Art der Plattform Aufnahme, standard ist 'auto'",
