--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -538,9 +538,13 @@
 	"edt_conf_smooth_continuousOutput_expl" : "Update the leds even if there is no change in the picture.",
 	"edt_conf_v4l2_heading_title" : "USB Capture",
 	"edt_conf_v4l2_device_title" : "Device",
-	"edt_conf_v4l2_device_expl" : "The path to the USB capture interface. Set to 'auto' for automatic detection. Example: '/dev/video0'",
+	"edt_conf_v4l2_device_expl" : "The path to the USB capture interface. Set to 'Automatic' for automatic detection. Example: '/dev/video0'",
 	"edt_conf_v4l2_standard_title" : "Video standard",
-	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region. 'Auto' keeps the value chosen by the v4l2 interface",
+	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region. 'Automatic' keeps the value chosen by the v4l2 interface",
+	"edt_conf_v4l2_resolution_title" : "Device Resolution",
+	"edt_conf_v4l2_resolution_expl" : "A list of supported resolutions of the active device",
+	"edt_conf_v4l2_framerate_title": "Frames per second",
+	"edt_conf_v4l2_framerate_expl": "The supported frames per second of the active device",
 	"edt_conf_v4l2_sizeDecimation_title" : "Size decimation",
 	"edt_conf_v4l2_sizeDecimation_expl" : "The factor of size decimation. 1 means no decimation (keep original size)",
 	"edt_conf_v4l2_cropLeft_title" : "Crop left",
