--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -492,6 +492,10 @@
     "edt_conf_v4l2_device_expl": "La ruta a la captura USB.",
     "edt_conf_v4l2_standard_title": "Estándar de vídeo",
     "edt_conf_v4l2_standard_expl": "Selecciona el estándar de vídeo para tu región.",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "Diezmación de tamaño",
     "edt_conf_v4l2_sizeDecimation_expl": "El factor de diezmación del tamaño",
     "edt_conf_v4l2_cropLeft_title": "Cortar izquierda",
