--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -492,6 +492,10 @@
     "edt_conf_v4l2_device_expl": "Percorso del dispositivo di cattura usb.",
     "edt_conf_v4l2_standard_title": "Standard video",
     "edt_conf_v4l2_standard_expl": "Seleziona lo standard video per la tua regione",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "Decimazione dimensione",
     "edt_conf_v4l2_sizeDecimation_expl": "Il fattore di decimazione della dimensione",
     "edt_conf_v4l2_cropLeft_title": "Ritaglia sinistra",
