--- a/assets/webconfig/i18n/pl.json
+++ b/assets/webconfig/i18n/pl.json
@@ -492,6 +492,10 @@
     "edt_conf_v4l2_device_expl": "",
     "edt_conf_v4l2_standard_title": "",
     "edt_conf_v4l2_standard_expl": "",
+    "edt_conf_v4l2_resolution_title": "",
+    "edt_conf_v4l2_resolution_expl": "",
+    "edt_conf_v4l2_framerate_title": "",
+    "edt_conf_v4l2_framerate_expl": "",
     "edt_conf_v4l2_sizeDecimation_title": "",
     "edt_conf_v4l2_sizeDecimation_expl": "",
     "edt_conf_v4l2_cropLeft_title": "",
