--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -469,7 +469,7 @@
 	"edt_conf_enum_PAL" : "PAL",
 	"edt_conf_enum_NTSC" : "NTSC",
 	"edt_conf_enum_SECAM" : "SECAM",
-	"edt_conf_enum_NO_CHANGE" : "Auto",
+	"edt_conf_enum_NO_CHANGE" : "Automatic",
 	"edt_conf_enum_logsilent" : "Silent",
 	"edt_conf_enum_logwarn" : "Warning",
 	"edt_conf_enum_logverbose" : "Verbose",
@@ -478,6 +478,7 @@
 	"edt_conf_enum_bbclassic" : "Classic",
 	"edt_conf_enum_bbosd" : "OSD",
 	"edt_conf_enum_automatic" : "Automatic",
+	"edt_conf_enum_custom": "Custom",
 	"edt_conf_gen_heading_title" : "General Settings",
 	"edt_conf_gen_name_title" : "Configuration name",
 	"edt_conf_gen_name_expl" : "A user defined name which is used to identify Hyperion. (Helpful if you have more than one Hyperion instance)",
