--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -431,6 +431,7 @@
     "edt_conf_enum_bbclassic": "Clásico",
     "edt_conf_enum_bbosd": "OSD",
     "edt_conf_enum_automatic": "Automático",
+    "edt_conf_enum_custom": "",
     "edt_conf_gen_heading_title": "Configuración General",
     "edt_conf_gen_name_title": "Nombre de configuración",
     "edt_conf_gen_name_expl": "Un nombre definido por el usuario que se utiliza para detectar Hyperion. (Útil con más de una instancia de Hyperion)",
