--- a/assets/webconfig/i18n/ro.json
+++ b/assets/webconfig/i18n/ro.json
@@ -431,6 +431,7 @@
     "edt_conf_enum_bbclassic": "",
     "edt_conf_enum_bbosd": "",
     "edt_conf_enum_automatic": "",
+    "edt_conf_enum_custom": "",
     "edt_conf_gen_heading_title": "",
     "edt_conf_gen_name_title": "",
     "edt_conf_gen_name_expl": "",
