--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -431,6 +431,7 @@
     "edt_conf_enum_bbclassic": "Klassisk",
     "edt_conf_enum_bbosd": "OSD",
     "edt_conf_enum_automatic": "Automatisk",
+    "edt_conf_enum_custom": "",
     "edt_conf_gen_heading_title": "Allmänna Inställningar",
     "edt_conf_gen_name_title": "Konfigurationsnamn",
     "edt_conf_gen_name_expl": "Ett användardefinierat namn som används för att identifiera Hyperion. (Hjälpsamt om du har mer än en Hyperion-instans)",
