add adjustable ssl timeout settings

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -453,6 +453,9 @@
 	"edt_dev_spec_brightnessFactor_title": "Helligkeitsfaktor",
 	"edt_dev_spec_brightnessMin_title": "Helligkeit minimum",
 	"edt_dev_spec_brightnessMax_title": "Helligkeit maximum",
+	"edt_dev_spec_sslReadTimeout_title" : "Streamer lese Timeout",
+	"edt_dev_spec_sslHSTimeoutMin_title" : "Streamer Handshake minimum Timeout",
+	"edt_dev_spec_sslHSTimeoutMax_title" : "Streamer Handshake maximum Timeout",
 	"edt_dev_spec_verbose_title": "Logge alle Hue Commandos",
 	"edt_dev_spec_debugStreamer_title": "Streamer Debugging",
 	"edt_dev_spec_debugLevel_title": "Streamer Verbindung Debug Stufe",
