--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -452,6 +452,9 @@
 	"edt_dev_spec_brightnessFactor_title" : "Brightness factor",
 	"edt_dev_spec_brightnessMin_title": "Brightness minimum",
 	"edt_dev_spec_brightnessMax_title": "Brightness maximum",
+	"edt_dev_spec_sslReadTimeout_title" : "Streamer read timeout",
+	"edt_dev_spec_sslHSTimeoutMin_title" : "Streamer handshake timeout minimum",
+	"edt_dev_spec_sslHSTimeoutMax_title" : "Streamer handshake timeout maximum",
 	"edt_dev_spec_verbose_title": "Log all Hue commands",
 	"edt_dev_spec_debugStreamer_title": "Streamer Debug",
 	"edt_dev_spec_debugLevel_title": "Streamer Connection Debug Level",
