--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -573,6 +573,10 @@
 	"edt_conf_v4l2_sDVOffsetMax_expl" : "Signal detection area vertical maximum (0.0-1.0)",
 	"edt_conf_v4l2_sDHOffsetMax_title" : "Signal Detection HMax",
 	"edt_conf_v4l2_sDHOffsetMax_expl" : "Signal detection area horizontal maximum (0.0-1.0)",
+	"edt_conf_v4l2_grabberFix_title": "Grabber Fix",
+	"edt_conf_v4l2_gFWidth_title": "Width",
+	"edt_conf_v4l2_gFHeight_title": "Height",
+	"edt_conf_v4l2_gFVType_title": "Format",
 	"edt_conf_instCapture_heading_title" : "Instance Capture",
 	"edt_conf_instC_systemEnable_title" : "Enable platform capture",
 	"edt_conf_instC_systemEnable_expl" : "Enables the platform capture for this led hardware instance",
