--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -577,6 +577,10 @@
 	"edt_conf_v4l2_gFWidth_title": "Width",
 	"edt_conf_v4l2_gFHeight_title": "Height",
 	"edt_conf_v4l2_gFVType_title": "Format",
+	"edt_conf_v4l2_grabberFix_expl": "v4l2 Grabber error fix. Overrides incase of a resolution/format mismatch",
+	"edt_conf_v4l2_gFWidth_expl": "Grabber Fix Width",
+	"edt_conf_v4l2_gFHeight_expl": "Grabber Fix Height",
+	"edt_conf_v4l2_gFVType_title": "Grabber Fix Video Format",
 	"edt_conf_instCapture_heading_title" : "Instance Capture",
 	"edt_conf_instC_systemEnable_title" : "Enable platform capture",
 	"edt_conf_instC_systemEnable_expl" : "Enables the platform capture for this led hardware instance",
