--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -710,7 +710,9 @@
 	"edt_eff_flag_header_desc": "Verpasse deinen LEDs die Farben deines Landes. Du kannst mehr als eine Flagge auswählen, je nach Intervall werden diese dann abwechselnd angezeigt.",
 	"edt_eff_collision_header": "Farbkollision",
 	"edt_eff_collision_header_desc": "Zwei Farbprojektile werden von zufälligen Positionen gesendet und kollidieren miteinander",
-	"edt_eff_explodeRadius": "Detonationsreichweite ",
+	"edt_eff_plasma_header": "Plasma",
+	"edt_eff_plasma_header_desc": "Farbverzerrungen in verschiedenen Richtungen",
+	"edt_eff_explodeRadius": "Detonationsreichweite",
 	"edt_eff_enum_all": "Alle",
 	"edt_eff_enum_all-together": "Alle zusammen",
 	"edt_eff_enum_list": "LED Liste",
