--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -808,6 +808,8 @@
     "edt_conf_net_localAdminAuth_expl": "När aktiverad, behövs ett lösenord för administrering i nätverket.",
     "edt_eff_collision_header": "färgkollision",
     "edt_eff_collision_header_desc": "Två färgprojektiler skickas från slumpmässiga positioner och kolliderar med varandra",
+    "edt_eff_plasma_header": "",
+    "edt_eff_plasma_header_desc": "",
     "edt_eff_explodeRadius": "Detonationsområde",
     "edt_dev_spec_printTimeStamp_title": "Lägg till tidsstämpel",
     "edt_eff_ledtest_header": "LED-test",
