--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -85,8 +85,6 @@
 	"dashboard_message_default_password_t": "WebUi Standardpasswort gesetzt",
 	"dashboard_message_default_password": "Das Standardpasswort der WebUi ist gesetzt. Wir empfehlen dringend, dieses zu ändern.",
 	"dashboard_active_instance": "Ausgewählte Instanz",
-	"dashboard_infobox_label_pltf" : "Plattform",
-	"dashboard_infobox_label_pltfpoweroff" : "Shutdown Poweroff",
 	"main_menu_dashboard_token": "Dashboard",
 	"main_menu_configuration_token": "Konfiguration",
 	"main_menu_general_conf_token": "Allgemein",
@@ -451,6 +449,7 @@
 	"edt_dev_spec_gpioBcm_title": "GPIO Pin",
 	"edt_dev_spec_ledIndex_title": "LED index",
 	"edt_dev_spec_colorComponent_title": "Farbkomponente",
+	"edt_dev_spec_printTimeStamp_title" : "Mit Zeitstempel",
 	"edt_conf_general_enable_title": "Aktiviert",
 	"edt_conf_general_enable_expl": "Wenn aktiviert, ist die Komponente aktiv.",
 	"edt_conf_general_priority_title": "Priorität",
@@ -574,10 +573,6 @@
 	"edt_conf_v4l2_sDVOffsetMax_expl": "Signal Erkennungs-Bereich vertikal maximum (0.0-1.0)",
 	"edt_conf_v4l2_sDHOffsetMax_title": "Signal Erkennung HMax",
 	"edt_conf_v4l2_sDHOffsetMax_expl": "Signal Erkennungs-Bereich horizontal maximum (0.0-1.0)",
-	"edt_conf_v4l2_grabberFix_title": "Feste Grabber Werte",
-	"edt_conf_v4l2_gFWidth_title": "Breite",
-	"edt_conf_v4l2_gFHeight_title": "Höhe",
-	"edt_conf_v4l2_gFVType_title": "Pixelformat",
 	"edt_conf_instCapture_heading_title": "Instance Aufnahme",
 	"edt_conf_instC_systemEnable_title": "Aktiviere Plattform Aufnahme",
 	"edt_conf_instC_systemEnable_expl": "Aktiviert die Plattform Aufnahme für diese LED Hardware Instanz.",
