feat: Add Trapezoid to LED Layout (#791)
* Update schema-ledConfig.json

extend schema with corner points (vertcal and horizontal values in percent)

* Update conf_leds.html

input fields for corner points

* Update content_leds.js

add corner values and calculation of led rows

* Update de.json

german title for corners

* CHanges 26.12.2019 Correction and PowerOff add

* GrabberFix PiCam

* VType as QString

* Unused variable deletet

* Missing new paramneters for GrabberFix

* Error json

* JSon error by user

* Crosscompile SutnikElf frok

* Warning unused variable

* Revert "Crosscompile SutnikElf frok"

This reverts commit 443fe8009021f15b617292868c778499c13282a7.

* Fixing a linting error

* Adding Grabber Override Names

* Adding more Grabber Fix translations

* Missed one

* remove V4L2 Grabber Fix and Power Button from Dashboard

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* Setting some limits to the trapezoid

Co-authored-by: SputnikElf <58911932+SputnikElf@users.noreply.github.com>
Co-authored-by: SputnikElf <sputnikelf@gmx.de>
Co-authored-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -784,6 +784,8 @@
 	"edt_append_hz": "Hz",
 	"edt_append_pixel": "Pixel",
 	"edt_append_percent": "%",
+	"edt_append_percent_h": "% hori",
+	"edt_append_percent_v": "% vert",
 	"edt_append_degree": "°",
 	"edt_append_sdegree": "s/grad",
 	"edt_append_leds": "LEDs",
@@ -824,5 +826,12 @@
 	"edt_msg_button_delete_row_title": "$1 Löschen",
 	"edt_msg_button_delete_row_title_short": "Löschen",
 	"edt_msg_button_collapse": "Einklappen",
-	"edt_msg_button_expand": "Ausklappen"
+	"edt_msg_button_expand": "Ausklappen",
+	"conf_leds_layout_ptln": "Trapezpunkte",
+	"conf_leds_layout_ptlh": "Horizontal",
+	"conf_leds_layout_ptlv": "Vertikal",
+	"conf_leds_layout_ptl": "Punkt Oben Links",
+	"conf_leds_layout_ptr": "Punkt Oben Rechts",
+	"conf_leds_layout_pbl": "Punkt Unten Links",
+	"conf_leds_layout_pbr": "Punkt Unten Rechts"
 }
