fix: Rewrite-/LatchTime LedDevice definitions (#785) (#799)
* Fix Rewrite/Latch Time

* dependencies can now be specified in the schema

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* dependencies can now be specified in the schema

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* correct default config

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* dependencies part 2

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* Update README.md

* build: Update Windows to Qt5.15 (#798)

* Update compile howto

- to qt5.15
- minimal install overhead
- sync with vscode and cmake

* Update docs with more input

gh actions windows: Qt5.15 and msvc2019

* fix: Azure build

* feat: Add Trapezoid to LED Layout (#791)

* Update schema-ledConfig.json

extend schema with corner points (vertcal and horizontal values in percent)

* Update conf_leds.html

input fields for corner points

* Update content_leds.js

add corner values and calculation of led rows

* Update de.json

german title for corners

* CHanges 26.12.2019 Correction and PowerOff add

* GrabberFix PiCam

* VType as QString

* Unused variable deletet

* Missing new paramneters for GrabberFix

* Error json

* JSon error by user

* Crosscompile SutnikElf frok

* Warning unused variable

* Revert "Crosscompile SutnikElf frok"

This reverts commit 443fe8009021f15b617292868c778499c13282a7.

* Fixing a linting error

* Adding Grabber Override Names

* Adding more Grabber Fix translations

* Missed one

* remove V4L2 Grabber Fix and Power Button from Dashboard

Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* Setting some limits to the trapezoid

Co-authored-by: SputnikElf <58911932+SputnikElf@users.noreply.github.com>
Co-authored-by: SputnikElf <sputnikelf@gmx.de>
Co-authored-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

* add Hue E

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -41,6 +41,7 @@
 	"general_btn_rename" : "Rename",
 	"general_btn_continue" : "Continue",
 	"general_btn_save" : "Save",
+	"general_btn_saverestart" : "Save and restart",	
 	"general_btn_saveandreload" : "Save and reload",
 	"general_btn_restarthyperion" : "Restart Hyperion",
 	"general_btn_off" : "Off",
@@ -472,6 +473,7 @@
 	"edt_dev_spec_cid_title" : "CID",
 	"edt_dev_spec_LBap102Mode_title" : "LightBerry APA102 Mode",
 	"edt_dev_spec_universe_title" : "Universe",
+	"edt_dev_spec_chanperfixture_title" : "Channels per Fixture",
 	"edt_dev_spec_whiteLedAlgor_title" : "White LED algorithm",
 	"edt_dev_spec_useRgbwProtocol_title" : "Use RGBW protocol",
 	"edt_dev_spec_maximumLedCount_title" : "Maximum LED count",
