--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -41,7 +41,7 @@
 	"general_btn_rename" : "Rename",
 	"general_btn_continue" : "Continue",
 	"general_btn_save" : "Save",
-	"general_btn_saverestart" : "Save and restart",	
+	"general_btn_saverestart" : "Save and restart",
 	"general_btn_saveandreload" : "Save and reload",
 	"general_btn_restarthyperion" : "Restart Hyperion",
 	"general_btn_off" : "Off",
@@ -584,8 +584,10 @@
 	"edt_conf_v4l2_heading_title" : "USB Capture",
 	"edt_conf_v4l2_device_title" : "Device",
 	"edt_conf_v4l2_device_expl" : "The path to the USB capture interface. Set to 'Automatic' for automatic detection. Example: '/dev/video0'",
+	"edt_conf_v4l2_input_title": "Input",
+	"edt_conf_v4l2_input_expl": "Select the video input of your device. 'Automatic' keeps the value chosen by the v4l2 interface.",
 	"edt_conf_v4l2_standard_title" : "Video standard",
-	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region. 'Automatic' keeps the value chosen by the v4l2 interface",
+	"edt_conf_v4l2_standard_expl" : "Select the video standard for your region. 'Automatic' keeps the value chosen by the v4l2 interface.",
 	"edt_conf_v4l2_resolution_title" : "Device Resolution",
 	"edt_conf_v4l2_resolution_expl" : "A list of supported resolutions of the active device",
 	"edt_conf_v4l2_framerate_title": "Frames per second",
