--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -487,6 +487,10 @@
 	"edt_dev_spec_clientKey_title": "Clientkey",
 	"edt_dev_spec_printTimeStamp_title" : "Mit Zeitstempel",
 	"edt_dev_spec_groupId_title": "Gruppen ID",
+	"edt_dev_spec_panelorganisation_title" : "Nummerierungsreihenfolge der Panels",	
+	"edt_dev_spec_order_top_down_title" : "1.",
+	"edt_dev_spec_order_left_right_title" : "2.",
+	"edt_dev_spec_panel_start_position" : "Startpanel [0-max Panels]",
 	"edt_conf_general_enable_title": "Aktiviert",
 	"edt_conf_general_enable_expl": "Wenn aktiviert, ist die Komponente aktiv.",
 	"edt_conf_general_priority_title": "Priorität",
@@ -522,6 +526,10 @@
 	"edt_conf_enum_dl_informational": "informativ",
 	"edt_conf_enum_dl_verbose": "sehr detailiert",
 	"edt_conf_enum_custom": "Benutzerdefiniert",
+	"edt_conf_enum_bottom_up": "von unten nach oben",
+	"edt_conf_enum_top_down": "von oben nach unten",
+	"edt_conf_enum_right_left": "von rechts and links",
+	"edt_conf_enum_left_right": "von links nach rechts",	
 	"edt_conf_gen_heading_title": "Allgemeine Einstellungen",
 	"edt_conf_gen_name_title": "Name der Konfiguration",
 	"edt_conf_gen_name_expl": "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
