--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -488,6 +488,10 @@
 	"edt_dev_spec_printTimeStamp_title" : "Add timestamp",
 	"edt_dev_spec_clientKey_title" : "Clientkey",
 	"edt_dev_spec_groupId_title" : "Group Id",
+	"edt_dev_spec_panelorganisation_title" : "Panel numbering sequence",	
+	"edt_dev_spec_order_top_down_title" : "1.",
+	"edt_dev_spec_order_left_right_title" : "2.",
+	"edt_dev_spec_panel_start_position" : "Startpanel [0-max panels]",
 	"edt_conf_general_enable_title" : "Activate",
 	"edt_conf_general_enable_expl" : "If checked, the component is enabled.",
 	"edt_conf_general_priority_title" : "Priority channel",
@@ -523,6 +527,10 @@
 	"edt_conf_enum_dl_informational": "Informational",
 	"edt_conf_enum_dl_verbose": "Verbose",
 	"edt_conf_enum_custom": "Custom",
+	"edt_conf_enum_bottom_up": "Bottom up",
+	"edt_conf_enum_top_down": "Top down",
+	"edt_conf_enum_right_left": "Right to left",
+	"edt_conf_enum_left_right": "Left to right",
 	"edt_conf_gen_heading_title" : "General Settings",
 	"edt_conf_gen_name_title" : "Configuration name",
 	"edt_conf_gen_name_expl" : "A user defined name which is used to detect Hyperion. (Helpful with more than one Hyperion instance)",
