--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -84,6 +84,7 @@
 	"dashboard_message_global_setting": "The settings on this page are not depending on a specific instance. Changes will be stored globally for all instances.",
 	"dashboard_message_default_password_t": "WebUi default password is set",
 	"dashboard_message_default_password": "The default password for the WebUi is set. We strongly recommend to change this.",
+	"dashboard_message_do_not_show_again": "Do not show this message again",
 	"dashboard_active_instance": "Selected instance",
 	"main_menu_dashboard_token" : "Dashboard",
 	"main_menu_configuration_token" : "Configuration",
