Yeelight support, generalize wizard elements

--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -316,13 +316,14 @@
     "wiz_hue_failure_connection": "El tiempo de conexión expiró. Por favor, pulsa el botón a tiempo.",
     "wiz_hue_failure_user": "Usuario no encontrado, crea uno nuevo debajo o introduce un ID de usuario válido",
     "wiz_hue_press_link": "Por favor, presione el botón de enlace en el Puente de Matiz.",
-    "wiz_hue_ids_disabled": "Desactivado",
-    "wiz_hue_ids_entire": "Imagen completa",
     "wiz_hue_noids": "Este puente de Matiz no tiene bombillas/tiras, por favor, emparéjalos antes con las aplicaciones de Hue",
-    "wiz_hue_pos": "Posición/Estado",
     "wiz_hue_searchb": "Buscando el puente...",
     "wiz_hue_blinkblue": "Permite a ID $1 encender el azul",
     "wiz_hue_ident": "Identificar",
+    "wiz_ids_disabled": "Desactivado",
+    "wiz_ids_entire": "Imagen completa",    
+    "wiz_pos": "Posición/Estado",    
+    "wiz_identify": "Identificar",    
     "wiz_cc_title": "Asistente de calibración de color",
     "wiz_cc_intro1": "Este asistente te guiará a través de la calibración led. Si estás utilizando Kodi, las imágenes de calibración y los videos se pueden enviar directamente a kodi sin más tareas de tu lado. Si no, necesitas descargar estos archivos tú mismo y aplicarlos, si el asistente lo desea.",
     "wiz_cc_kwebs": "Servidor web Kodi (IP:PUERTO)",
