--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -316,13 +316,13 @@
     "wiz_hue_failure_connection": "Timeout: premi il bottone del bridge entro il periodo di 30 secondi",
     "wiz_hue_failure_user": "Utente non trovato, creane uno nuovo qui sotto o inserisci un id utente valido",
     "wiz_hue_press_link": "Premi il bottone di collegamento sull'Hue Bridge.",
-    "wiz_hue_ids_disabled": "Disattiva",
-    "wiz_hue_ids_entire": "Immagine intera",
     "wiz_hue_noids": "questo Hue bridge non ha lampadine/strisce, prima associale con l'Hue App",
-    "wiz_hue_pos": "Posizione/Stato",
     "wiz_hue_searchb": "Cercando il bridge...",
     "wiz_hue_blinkblue": "ID $1 si illumina di blu",
-    "wiz_hue_ident": "Identifica",
+    "wiz_ids_disabled": "Disattiva",
+    "wiz_ids_entire": "Immagine intera",    
+    "wiz_pos": "Posizione/Stato",    
+    "wiz_identify" : "Identifica",    
     "wiz_cc_title": "Assistente calibrazione colore",
     "wiz_cc_intro1": "Questo assistente ti guiderà attraverso la calibrazione dei tuoi led. Se stai usando Kodi, le immagini e i video di calibrazione possono essere mandati direttamente a Kodi senza altro lavoro da parte tua. Altrimenti devi scaricare questi file e applicarli tu stesso, se l'assistente lo necessita.",
     "wiz_cc_kwebs": "Webserver Kodi (IP:Porta)",
