--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -316,13 +316,13 @@
     "wiz_hue_failure_connection": "Timeout: Tryck på bryggknappen inom 30 sekunder",
     "wiz_hue_failure_user": "Användaren hittades inte, skapa en ny med knappen nedan eller mata in ett giltigt användar-ID och tryck på \"ladda om\"",
     "wiz_hue_press_link": "Tryck på länkknappen på HUE-bryggan.",
-    "wiz_hue_ids_disabled": "Inaktiverad",
-    "wiz_hue_ids_entire": "Hela bilden",
     "wiz_hue_noids": "Denna Hue-brygga har inga LED-lampor/-tejp, vänligen koppla ihop dem med HUE-appen innan",
-    "wiz_hue_pos": "Position/Läge",
     "wiz_hue_searchb": "Letar efter brygga...",
     "wiz_hue_blinkblue": "Låt ID $1 lysa blått",
-    "wiz_hue_ident": "Identifiera",
+    "wiz_ids_disabled": "Inaktiverad",
+    "wiz_ids_entire": "Hela bilden",    
+    "wiz_pos": "Position/Läge",    
+    "wiz_identify": "Identifiera",
     "wiz_cc_title": "Färgkalibreringsguiden",
     "wiz_cc_intro1": "Den här guiden leder dig igenom din LED-kalibrering. Om du använder Kodi kan kalibreringsbilder och videoklipp skickas direkt utan ytterligare åtgärder från din sida. Om inte, måste du ladda ner dessa filer själv och visa dem när guiden vill justera inställningen.",
     "wiz_cc_kwebs": "Kodi webbserver (IP:Port)",
