--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -351,9 +351,9 @@
 	"InfoDialog_iswitch_title": "Hyperion switcher",
 	"InfoDialog_iswitch_text": "Sollte in deinem lokalen Netzwerk Hyperion mehr als einmal laufen, kannst du hier zwischen den Web Konfigurationen hin und her schalten. Wähle dazu die Instanz unten aus und switche!",
 	"wiz_wizavail": "Assistent verfügbar",
-	"wiz_guideyou": "Der $1 wird dich durch die Konfiguration leiten, drücke dazu einfach den Button!",
+	"wiz_guideyou": "Der $1 wird Dich durch die Konfiguration leiten, drücke dazu einfach den Button!",
 	"wiz_rgb_title": "RGB Byte Reihenfolge Assistent",
-	"wiz_rgb_intro1": "Dieser Assisent wird dir dabei helfen die richtige Byte Reihenfolge für deine leds zu finden. Klicke auf Fortfahren um zu beginnen.",
+	"wiz_rgb_intro1": "Dieser Assisent wird Dir dabei helfen die richtige Byte Reihenfolge für deine leds zu finden. Klicke auf Fortfahren um zu beginnen.",
 	"wiz_rgb_intro2": "Wann benötigt man diesen Assistenten? Zur Erstkonfiguration oder wenn deine LEDs zb rot leuchten sollten, sie aber blau oder grün sind.",
 	"wiz_rgb_expl": "Der Farbpunkt ändert alle x Sekunden die Farbe (rot, grün), zur selben Zeit ändern deine LEDs die Farbe ebenfalls. Beantworte die Fragen unten, um deine RGB Byte Reihenfolge zu überprüfen/korrigieren.",
 	"wiz_rgb_switchevery": "Ändere Farbe alle...",
@@ -361,9 +361,9 @@
 	"wiz_rgb_qrend": "...rot ist?",
 	"wiz_rgb_qgend": "...grün ist?",
 	"wiz_hue_title": "Philips Hue Assistent",
-	"wiz_hue_intro1": "Dieser Assistent hilft dir bei der Konfiguration von Hyperion für Philips Hue. Zu den Funktionen zählen ein automatisches finden der Hue Bridge, einen neuen Benutzer erstellen, die einzelnen Lampen unterschiedlichen Bereichen im Bild zuzuordnen und weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
+	"wiz_hue_intro1": "Dieser Assistent hilft Dir bei der Konfiguration von Hyperion für Philips Hue. Zu den Funktionen zählen ein automatisches finden der Hue Bridge, einen neuen Benutzer erstellen, die einzelnen Lampen unterschiedlichen Bereichen im Bild zuzuordnen und weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
 	"wiz_hue_desc1": "Es wird automatisch nach der Hue Bridge gesucht, solltest sie nicht gefunden werden, gebe die IP an und drücke den \"neu laden\" Button. Danach benötigst du eine gültige Benutzer ID, diese kann auch erstellt werden.",
-	"wiz_hue_desc2": "Nun kannst du auswählen, welche der Lampen (IDs) hinzugefügt werden sollen. Mit der Position wählst du aus, wo die jeweilige Lampe \"im Bild\" sitzen soll. Deaktivierte Lampen werden nicht hinzugefügt. Als Hilfe zur Identifizierung kannst du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen.",
+	"wiz_hue_desc2": "Nun kannst Du auswählen, welche der Lampen (IDs) hinzugefügt werden sollen. Mit der Position wählst Du aus, wo die jeweilige Lampe \"im Bild\" sitzen soll. Deaktivierte Lampen werden nicht hinzugefügt. Als Hilfe zur Identifizierung kannst Du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen.",
 	"wiz_hue_ip": "Hue Bridge IP:",
 	"wiz_hue_username": "Benutzer ID:",
 	"wiz_hue_clientkey": "Clientkey:",
@@ -372,13 +372,9 @@
 	"wiz_hue_failure_connection": "Zeitüberschreitung. Bitte drücke die Taste auf deiner Hue Bridge rechtzeitig",
 	"wiz_hue_failure_user": "Benutzer ID wurde nicht gefunden, erstelle eine neue, indem du auf den nachfolgenden Button klickst, oder gib eine bereits registrierte an und klicke dann auf das \"neu laden\" Symbol.",
 	"wiz_hue_press_link": "Bitte \"Link\" Taste auf der Hue Bridge drücken.",
-	"wiz_hue_ids_disabled": "Deaktiviert",
-	"wiz_hue_ids_entire": "Ganzes Bild",
 	"wiz_hue_noids": "Diese Hue Bridge hat keine verbundenen Lampen, bitte verbinde diese zuerst mit deiner Hue Bridge (Nutze die Hue Apps dafür)",
-	"wiz_hue_pos": "Position/Status",
 	"wiz_hue_searchb": "Suche nach Hue Bridge...",
 	"wiz_hue_blinkblue": "Lasse ID $1 blau aufleuchten",
-	"wiz_hue_ident": "Identifiziere",
 	"wiz_hue_e_create_user": "Neuen Benutzer und Clientkey erstellen",
 	"wiz_hue_e_clientkey_needed": "Für die Verwendung der Entertainment API, ist ein zum Usernamen passender Clientkey erforderlich. Bitte einen vorhandenen eingeben oder über die Schaltflächen unten einen neuen erstellen.",
 	"wiz_hue_e_use_groupid": "Gruppen ID $1 verwenden",
@@ -392,6 +388,16 @@
 	"wiz_hue_e_desc2": "Nun kannst du die Entertainment Gruppe auswählen, welche die Lampen zur Verwendung mit Hyperion beinhaltet.",
 	"wiz_hue_e_desc3": "Nun kannst du auswählen, mit welcher Position die jeweilige Lampe \"im Bild\" sitzen soll. Eine Vorauswahl der Position, wurde Anhand der konfigurierten Positionen der Lampen in der Entertainment Gruppe gewählt. Dies ist nur eine Empfehlung und kann beliebig angepasst werden. Als Hilfe zur Identifizierung kannst du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen und die Auswahl zu verbessern.",
 	"wiz_hue_e_use_group": "Gruppe verwenden",
+	"wiz_yeelight_title": "Yeelight Assistent",
+	"wiz_yeelight_intro1": "Dieser Assistent hilft Dir bei der Konfiguration von Hyperion für Yeelight. Zu den Funktionen zählen ein automatisches finden der Yeelights, die einzelnen Lampen unterschiedlichen Bereichen im Bild zuzuordnen und weitere Einstellungen von Hyperion automatisch anzupassen. Kurz gesagt: Komplette Einrichtung mit ein paar Klicks.",
+	"wiz_yeelight_desc2": "Nun kannst Du auswählen, welche der Lampen hinzugefügt werden sollen. Mit der Position wählst Du aus, wo die jeweilige Lampe \"im Bild\" sitzen soll. Deaktivierte Lampen werden nicht hinzugefügt. Als Hilfe zur Identifizierung kannst Du sie mit einem Klick auf den rechten Button kurz aufleuchten lassen.",
+	"wiz_yeelight_noLights": "Es wurden keine Yeelights gefunden! Bitte verbinde die Yeelights mit dem Netzwerk oder konfiguriere sie manuell.",
+	"wiz_yeelight_unsupported" : "Nicht Unterstützt",
+	"wiz_ids_disabled": "Deaktiviert",
+	"wiz_ids_entire": "Ganzes Bild",
+	"wiz_pos": "Position/Status",			
+	"wiz_identify" : "Identifiziere",
+	"wiz_identify_light": "Identifiziere $1",	
 	"wiz_cc_title": "Farbkalibrierungs Assistent",
 	"wiz_cc_intro1": "Der Assistent wird dich durch die Kalibrierung deiner LEDs leiten. Sofern du Kodi nutzt, können die Bilder und Testvideos direkt an Kodi geschickt werden. Andernfalls musst du das Material selbst herunterladen und anwenden.",
 	"wiz_cc_kwebs": "Kodi Webserver (IP:Port)",
@@ -434,7 +440,8 @@
 	"edt_dev_spec_orbIds_title": "Orb ID(s)",
 	"edt_dev_spec_useOrbSmoothing_title": "Nutze Orb Glättung",
 	"edt_dev_spec_targetIp_title": "Ziel IP",
-	"edt_dev_spec_targetIpHost_title": "Ziel IP/hostname",
+	"edt_dev_spec_targetIpHost_title": "Ziel IP/Rechnername",
+	"edt_dev_spec_networkDeviceName_title" : "Gerätename im Netzwerk",
 	"edt_dev_spec_outputPath_title": "Ausgabepfad",
 	"edt_dev_spec_delayAfterConnect_title": "Verzögerung nach Verbindung",
 	"edt_dev_spec_FCsetConfig_title": "Wende fadecandy Konfiguration an",
@@ -447,13 +454,26 @@
 	"edt_dev_spec_username_title": "Benutzername",
 	"edt_dev_spec_lightid_title": "Lampen ID(s)",
 	"edt_dev_spec_lightid_itemtitle": "ID",
+	"edt_dev_spec_lights_title" : "Lampe(n)",
+	"edt_dev_spec_lights_itemtitle" : "Lampe",
+	"edt_dev_spec_lights_name" : "Name",
 	"edt_dev_spec_transistionTime_title": "Übergangszeit",
 	"edt_dev_spec_blackLightsTimeout_title": "Signal Erkennung Timeout bei schwarz",
+	"edt_dev_spec_transistionTimeExtra_title" : "Extra Übergangszeit bei Schwarz",
+	"edt_dev_spec_transeffect_title" : "Übergangseffekt",
+	"edt_conf_enum_transeffect_smooth" : "Gleichmäßig",
+	"edt_conf_enum_transeffect_sudden" : "Sofort",
+	"edt_dev_spec_debugLevel_title" : "Debug Stufe",
+	"edt_conf_enum_dl_nodebug" : "Keine Debugausgabe",
+	"edt_conf_enum_dl_verbose1" : "Stufe 1",
+	"edt_conf_enum_dl_verbose2" : "Stufe 2",
+	"edt_conf_enum_dl_verbose3" : "Stufe 3",
 	"edt_dev_spec_brightnessThreshold_title": "Signal Erkennung Helligkeitsminimum",
 	"edt_dev_spec_switchOffOnBlack_title": "Aus bei schwarz",
+	"edt_dev_spec_switchOffOnbelowMinBrightness_title" : "Aus bei Minimum",
 	"edt_dev_spec_brightnessFactor_title": "Helligkeitsfaktor",
-	"edt_dev_spec_brightnessMin_title": "Helligkeit minimum",
-	"edt_dev_spec_brightnessMax_title": "Helligkeit maximum",
+	"edt_dev_spec_brightnessMin_title": "Helligkeitsminimum",
+	"edt_dev_spec_brightnessMax_title": "Helligkeitsmaximum",
 	"edt_dev_spec_sslReadTimeout_title" : "Streamer lese Timeout",
 	"edt_dev_spec_sslHSTimeoutMin_title" : "Streamer Handshake minimum Timeout",
 	"edt_dev_spec_sslHSTimeoutMax_title" : "Streamer Handshake maximum Timeout",
@@ -507,6 +527,7 @@
 	"edt_conf_enum_brg": "BRG",
 	"edt_conf_enum_gbr": "GBR",
 	"edt_conf_enum_grb": "GRB",
+	"edt_conf_enum_hsv" : "HSV",	
 	"edt_conf_enum_linear": "Linear",
 	"edt_conf_enum_PAL": "PAL",
 	"edt_conf_enum_NTSC": "NTSC",
