--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -372,13 +372,9 @@
 	"wiz_hue_failure_connection" : "Timeout: Please press the bridge button within the period of 30 seconds",
 	"wiz_hue_failure_user" : "User not found, create a new one with the button below or input a valid user id and press the \"reload\" symbol.",
 	"wiz_hue_press_link" : "Please press link button on the Hue Bridge.",
-	"wiz_hue_ids_disabled" : "Deactivated",
-	"wiz_hue_ids_entire" : "Whole picture",
 	"wiz_hue_noids" : "This Hue bridge has no bulbs/stripes, please pair them before with the Hue Apps",
-	"wiz_hue_pos": "Position/State",
 	"wiz_hue_searchb": "Searching for bridge...",
 	"wiz_hue_blinkblue": "Let ID $1 light up blue",
-	"wiz_hue_ident" : "Identify",
 	"wiz_hue_e_create_user" : "Create new User and clientkey",
 	"wiz_hue_e_clientkey_needed": "A clientkey that matches the username is required to use the entertainment API. Please enter an existing one or use the button below to create a new one.",
 	"wiz_hue_e_use_groupid": "Use group ID $1",
@@ -392,6 +388,16 @@
 	"wiz_hue_e_desc2" : "Now choose your entertainment group, which has all your lights inside for use with Hyperion.",
 	"wiz_hue_e_desc3": "Now you can choose in which position the respective lamp should be \"in the picture\". A preselection of the position was made based on the configured positions of the lights in the entertainment group. This is just a recommendation and can be customized as desired. You can therefore highlight them briefly by clicking on the right button to improve the selection.",
 	"wiz_hue_e_use_group" : "Use group",
+	"wiz_yeelight_title" : "Yeelight Wizard",
+	"wiz_yeelight_intro1" : "This wizards configures Hyperion for the Yeelight system. Features are the Yeelighs' auto detection, setting each light to a specific position on your picture or disable it and tune the Hyperion settings automatically! So in short: All you need are some clicks and you are done!",
+	"wiz_yeelight_desc2" : "Now choose which lamps should be added. The position assigns the lamp to a specific position on your \"picture\". Disabled lamps won't be added. To identify single lamps press the button on the right.",
+	"wiz_yeelight_noLights": "No Yeelights found! Please get the lights connected to the network or configure them mannually.",
+	"wiz_yeelight_unsupported" : "Unsupported",
+	"wiz_pos": "Position/State",
+	"wiz_ids_disabled" : "Deactivated",
+	"wiz_ids_entire" : "Whole picture",	
+	"wiz_identify" : "Identify",
+	"wiz_identify_light": "Identify $1",
 	"wiz_cc_title" : "Colour calibration wizard",
 	"wiz_cc_intro1" : "This wizard will guide you through your led calibration. If you are using Kodi, the calibration pictures and videos can be sent directly to it without further actions on your side. If not, you will need to download these files yourself and display them when the wizard needs you to adjust the setting.",
 	"wiz_cc_kwebs" : "Kodi webserver (IP:Port)",
@@ -434,7 +440,9 @@
 	"edt_dev_spec_orbIds_title" : "Orb ID(s)",
 	"edt_dev_spec_useOrbSmoothing_title" : "Use orb smoothing",
 	"edt_dev_spec_targetIp_title" : "Target IP",
-	"edt_dev_spec_targetIpHost_title" : "Target IP/hostname",
+	"edt_dev_spec_targetIpHost_title" : "Target IP/Hostname",
+	"edt_dev_spec_networkDeviceName_title" : "Network devicename",
+	"edt_dev_spec_networkDevicePort_title" : "Port",	
 	"edt_dev_spec_outputPath_title" : "Output path",
 	"edt_dev_spec_delayAfterConnect_title" : "Delay after connect",
 	"edt_dev_spec_FCsetConfig_title" : "Set fadecandy configuration",
@@ -447,10 +455,23 @@
 	"edt_dev_spec_username_title" : "Username",
 	"edt_dev_spec_lightid_title" : "Light ID(s)",
 	"edt_dev_spec_lightid_itemtitle" : "ID",
+	"edt_dev_spec_lights_title" : "Light(s)",
+	"edt_dev_spec_lights_itemtitle" : "Light",
+	"edt_dev_spec_lights_name" : "Name",
 	"edt_dev_spec_transistionTime_title" : "Transition time",
 	"edt_dev_spec_blackLightsTimeout_title": "Signal detection timeout on black",
+	"edt_dev_spec_transistionTimeExtra_title" : "Extra time darkness",	
+	"edt_dev_spec_transeffect_title" : "Transition effect",
+	"edt_conf_enum_transeffect_smooth" : "Smooth",
+	"edt_conf_enum_transeffect_sudden" : "Sudden",
+	"edt_dev_spec_debugLevel_title" : "Debug level",
+	"edt_conf_enum_dl_nodebug" : "No Debug output",
+	"edt_conf_enum_dl_verbose1" : "Verbosity level 1",
+	"edt_conf_enum_dl_verbose2" : "Verbosity level 2",
+	"edt_conf_enum_dl_verbose3" : "Verbosity level 3",
 	"edt_dev_spec_brightnessThreshold_title": "Signal detection brightness minimum",
 	"edt_dev_spec_switchOffOnBlack_title" : "Switch off on black",
+	"edt_dev_spec_switchOffOnbelowMinBrightness_title" : "Switch-off, below minimum",
 	"edt_dev_spec_brightnessFactor_title" : "Brightness factor",
 	"edt_dev_spec_brightnessMin_title": "Brightness minimum",
 	"edt_dev_spec_brightnessMax_title": "Brightness maximum",
@@ -508,6 +529,7 @@
 	"edt_conf_enum_brg" : "BRG",
 	"edt_conf_enum_gbr" : "GBR",
 	"edt_conf_enum_grb" : "GRB",
+	"edt_conf_enum_hsv" : "HSV",
 	"edt_conf_enum_linear" : "Linear",
 	"edt_conf_enum_PAL" : "PAL",
 	"edt_conf_enum_NTSC" : "NTSC",
