Usability - Enable/Disable Instance button

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -65,8 +65,8 @@
 	"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
 	"dashboard_infobox_label_statush" : "Hyperion status:",
 	"dashboard_infobox_label_smartacc" : "Smart Access",
-	"dashboard_infobox_label_enableh" : "Enable Hyperion",
-	"dashboard_infobox_label_disableh" : "Disable Hyperion",
+	"dashboard_infobox_label_enableh" : "Enable Instance: $1",
+	"dashboard_infobox_label_disableh" : "Disable Instance: $1",
 	"dashboard_componentbox_label_title" : "Components status",
 	"dashboard_componentbox_label_comp" : "Component",
 	"dashboard_componentbox_label_status" : "Status",
