--- a/assets/webconfig/i18n/es.json
+++ b/assets/webconfig/i18n/es.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Ejecutas la última versión de Hyperion.",
     "dashboard_infobox_label_statush": "Estado de Hyperion:",
     "dashboard_infobox_label_smartacc": "Acceso Inteligente",
-    "dashboard_infobox_label_enableh": "Habilitar Hyperion",
-    "dashboard_infobox_label_disableh": "Deshabilitar Hyperion",
+    "dashboard_infobox_label_enableh": "Habilitar Instancia: $1",
+    "dashboard_infobox_label_disableh": "Deshabilitar Instancia: $1",
     "dashboard_componentbox_label_title": "Estado de los componentes",
     "dashboard_componentbox_label_comp": "Estado de los componentes",
     "dashboard_componentbox_label_status": "Estado",
