--- a/assets/webconfig/i18n/it.json
+++ b/assets/webconfig/i18n/it.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Stai eseguendo l'ultima versione di Hyperion.",
     "dashboard_infobox_label_statush": "Status Hyperion:",
     "dashboard_infobox_label_smartacc": "Accesso Smart",
-    "dashboard_infobox_label_enableh": "Abilita Hyperion",
-    "dashboard_infobox_label_disableh": "Disabilita Hyperion",
+    "dashboard_infobox_label_enableh": "Abilita Istanza: $1",
+    "dashboard_infobox_label_disableh": "Disabilita Istanza: $1",
     "dashboard_componentbox_label_title": "Status componenti",
     "dashboard_componentbox_label_comp": "Componente",
     "dashboard_componentbox_label_status": "Status",
