--- a/assets/webconfig/i18n/nl.json
+++ b/assets/webconfig/i18n/nl.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Je draait de laatste versie van Hyperion",
     "dashboard_infobox_label_statush": "Hyperion status:",
     "dashboard_infobox_label_smartacc": "Slimme toegang",
-    "dashboard_infobox_label_enableh": "Schakel Hyperion in",
-    "dashboard_infobox_label_disableh": "Schakel Hyperion uit",
+    "dashboard_infobox_label_enableh": "Schakel Instantie $1 in",
+    "dashboard_infobox_label_disableh": "Schakel Instantie $1 uit",
     "dashboard_componentbox_label_title": "Componenten status",
     "dashboard_componentbox_label_comp": "Component",
     "dashboard_componentbox_label_status": "Status",
