--- a/assets/webconfig/i18n/sv.json
+++ b/assets/webconfig/i18n/sv.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Du använder den senaste versionen av Hyperion.",
     "dashboard_infobox_label_statush": "Hyperion-status:",
     "dashboard_infobox_label_smartacc": "Smart Åtkomst",
-    "dashboard_infobox_label_enableh": "Aktivera Hyperion",
-    "dashboard_infobox_label_disableh": "Inaktivera Hyperion",
+    "dashboard_infobox_label_enableh": "Aktivera Instans: $1",
+    "dashboard_infobox_label_disableh": "Inaktivera Instans: $1",
     "dashboard_componentbox_label_title": "Komponentstatus",
     "dashboard_componentbox_label_comp": "Komponent",
     "dashboard_componentbox_label_status": "Status",
