--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Spusťte nejnovější verzi Hyperionu.",
     "dashboard_infobox_label_statush": "Stav Hyperionu:",
     "dashboard_infobox_label_smartacc": "Inteligentní přístup",
-    "dashboard_infobox_label_enableh": "Povolit Hyperion",
-    "dashboard_infobox_label_disableh": "Vypnout Hyperion",
+    "dashboard_infobox_label_enableh": "Povolit Instance: $1",
+    "dashboard_infobox_label_disableh": "Vypnout Instance $1",
     "dashboard_componentbox_label_title": "stav komponentu",
     "dashboard_componentbox_label_comp": "Komponent",
     "dashboard_componentbox_label_status": "Status",
