--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -16,6 +16,7 @@
 	"general_speech_nl" : "Dutch",
 	"general_speech_pl" : "Polish",
 	"general_speech_ro" : "Romanian",
+	"general_speech_tr" : "Turkey",
 	"general_access_default" : "Default",
 	"general_access_advanced" : "Advanced",
 	"general_access_expert" : "Expert",
