--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -16,6 +16,7 @@
 	"general_speech_nl" : "Niederländisch",
 	"general_speech_pl" : "Polnisch",
 	"general_speech_ro" : "Rumänisch",
+	"general_speech_tr" : "Türkisch",
 	"general_access_default": "Standard",
 	"general_access_advanced": "Fortgeschritten",
 	"general_access_expert": "Experte",
