feat(webui): Add French, Turkish, Vietnamese & translation update (#842)
* add Turkey

* Add French, Vietnamese

* Update translations

* Update settings.js

* add changelog entry

Co-authored-by: Serhan <TPmodding@serhan.in>

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -16,6 +16,9 @@
 	"general_speech_nl" : "Dutch",
 	"general_speech_pl" : "Polish",
 	"general_speech_ro" : "Romanian",
+	"general_speech_tr" : "Turkish",
+	"general_speech_vi" : "Vietnamese",
+	"general_speech_fr" : "French",
 	"general_access_default" : "Default",
 	"general_access_advanced" : "Advanced",
 	"general_access_expert" : "Expert",
@@ -489,7 +492,7 @@
 	"edt_dev_spec_printTimeStamp_title" : "Add timestamp",
 	"edt_dev_spec_clientKey_title" : "Clientkey",
 	"edt_dev_spec_groupId_title" : "Group Id",
-	"edt_dev_spec_panelorganisation_title" : "Panel numbering sequence",	
+	"edt_dev_spec_panelorganisation_title" : "Panel numbering sequence",
 	"edt_dev_spec_order_top_down_title" : "1.",
 	"edt_dev_spec_order_left_right_title" : "2.",
 	"edt_dev_spec_panel_start_position" : "Startpanel [0-max panels]",
