refactor: Address (Windows) compile warnings (#840)
* Windows compile errors and (Qt 5.15 deprecation) warnings

* Usability - Enable/Disable Instance button

Co-authored-by: brindosch <edeltraud70@gmx.de>

--- a/assets/webconfig/i18n/cs.json
+++ b/assets/webconfig/i18n/cs.json
@@ -52,8 +52,8 @@
     "dashboard_infobox_message_updatesuccess": "Spusťte nejnovější verzi Hyperionu.",
     "dashboard_infobox_label_statush": "Stav Hyperionu:",
     "dashboard_infobox_label_smartacc": "Inteligentní přístup",
-    "dashboard_infobox_label_enableh": "Zapnout Hyperion",
-    "dashboard_infobox_label_disableh": "Vypnout Hyperion",
+    "dashboard_infobox_label_enableh": "Povolit Instance: $1",
+    "dashboard_infobox_label_disableh": "Vypnout Instance $1",
     "dashboard_componentbox_label_title": "Stav komponent",
     "dashboard_componentbox_label_comp": "Komponenty",
     "dashboard_componentbox_label_status": "Status",
